syntax = "proto3";

package composable_database;

// Common message types and enums here

message TaskID {
    int32 query_id = 1;
    int32 task = 2;
}

message QueryStatus {
    enum Status {
        DONE = 0;
        IN_PROGRESS = 1;
        FAILED = 2;
        NOT_FOUND = 3;
    }
    Status status = 1;
}

// Other common definitions
